RESOLVED FIXED195841
Have smaller default quotas for third party frames
https://bugs.webkit.org/show_bug.cgi?id=195841
Summary Have smaller default quotas for third party frames
youenn fablet
Reported 2019-03-15 20:18:10 PDT
Have smaller default quotas for third party frames
Attachments
Patch (6.82 KB, patch)
2019-03-15 20:23 PDT, youenn fablet
no flags
Patch (6.90 KB, patch)
2019-03-15 22:08 PDT, youenn fablet
no flags
Patch for landing (8.44 KB, patch)
2019-03-20 14:48 PDT, youenn fablet
no flags
Patch for landing (8.44 KB, patch)
2019-03-20 14:57 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2019-03-15 20:23:27 PDT
youenn fablet
Comment 2 2019-03-15 22:08:47 PDT
Geoffrey Garen
Comment 3 2019-03-16 13:54:04 PDT
Comment on attachment 364916 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=364916&action=review > Source/WebKit/NetworkProcess/NetworkProcess.cpp:2342 > + auto quota = origin.topOrigin == origin.clientOrigin ? storageQuotaManagers.defaultQuota : storageQuotaManagers.defaultQuota / 10; Rather than dividing by 10, I think we want a thirdPartyQuota() helper function to match the defaultQuota() helper function. That way, they’ll be next to each other, and we’ll remember to update them together. (Dividing by 10 might not be right in the future, if we reduce the default quota.)
youenn fablet
Comment 4 2019-03-20 14:48:14 PDT
Created attachment 365405 [details] Patch for landing
EWS Watchlist
Comment 5 2019-03-20 14:51:32 PDT
Attachment 365405 [details] did not pass style-queue: ERROR: Source/WebKit/NetworkProcess/NetworkProcess.cpp:2032: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 6 2019-03-20 14:57:08 PDT
Created attachment 365406 [details] Patch for landing
WebKit Commit Bot
Comment 7 2019-03-20 15:15:09 PDT
Comment on attachment 365406 [details] Patch for landing Clearing flags on attachment: 365406 Committed r243247: <https://trac.webkit.org/changeset/243247>
WebKit Commit Bot
Comment 8 2019-03-20 15:15:10 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9 2019-03-20 15:17:59 PDT
Note You need to log in before you can comment on or make changes to this bug.