Have smaller default quotas for third party frames https://bugs.webkit.org/show_bug.cgi?id=195841

Reviewed by Geoffrey Garen.

Source/WebCore:

Test: http/wpt/cache-storage/quota-third-party.https.html

* storage/StorageQuotaManager.h:
(WebCore::StorageQuotaManager::defaultQuota):
Change default quota to 1GB.

Source/WebKit:

* NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::storageQuotaManager):
For third party iframes, use the default quota divided by 10.

LayoutTests:

* http/wpt/cache-storage/quota-third-party.https-expected.txt: Added.
* http/wpt/cache-storage/quota-third-party.https.html: Added.
* http/wpt/cache-storage/resources/quota-third-party-iframe.html: Added.


Canonical link: https://commits.webkit.org/210312@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243247 268f45cc-cd09-0410-ab3c-d52691b4dbfc